kubernetes/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  selector:
    app: kavita
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: ClusterIP
